forth/test/fail/test_dot_call_local.af
\ Must fail to compile.
fun: test_dot_call_local_fail { -- err }
  1 { val }
  .val
  nil
end
